--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "require": {
         "php": ">=5.4.4",
         "oro/platform": "1.1.*",
-        "oro/crm": "1.1.*"
+        "oro/crm": "1.1.*",
+        "beberlei/assert": "*"
     },
     "require-dev": {
         "eltrino/phpunit-mockannotations": "*"
