--- a/Resources/config/navigation.yml
+++ b/Resources/config/navigation.yml
@@ -9,9 +9,13 @@ oro_menu_config:
         diamante_branch_list:
             label: 'Branches'
             route: diamante_branch_list
+            extras:
+                routes: ['diamante_branch_*']
         diamante_ticket_list:
             label: 'All Tickets'
             route: diamante_ticket_list
+            extras:
+                routes: ['diamante_ticket_*', 'diamante_comment_*']
     tree:
         application_menu:
             children:
@@ -21,5 +25,16 @@ oro_menu_config:
                         diamante_ticket_list: ~
 
 oro_titles:
-    diamante_comment_create: New Comment
-    diamante_comment_update: Edit Comment
+    diamante_branch_list: ~
+    diamante_branch_view: '%%branch.name%%'
+    diamante_branch_create: 'Create Branch'
+    diamante_branch_update: '%%branch.name%% - Edit'
+
+    diamante_comment_create: 'Add Comment - %%ticket.subject%%'
+    diamante_comment_update: 'Edit Comment - %%ticket.subject%%'
+
+    diamante_ticket_list: ~
+    diamante_ticket_view: '%%ticket.subject%%'
+    diamante_ticket_create: 'Create Ticket'
+    diamante_ticket_update: '%%ticket.subject%% - Edit'
+    diamante_ticket_create_attach: 'Add Attachment'
