--- a/Resources/config/oro/liip_imagine.yml
+++ b/Resources/config/oro/liip_imagine.yml
@@ -4,11 +4,10 @@ liip_imagine:
             data_loader: diamante_attachment
             quality:          95
             filters:
-                upscale: { min: [140, 140] }
-                thumbnail:    { size: [140, 140], mode: outbound, allow_upscale: true }
+                thumbnail:    { size: [180, 180], mode: inset }
                 strip:        ~
         attach_preview_default:
             quality:          95
             filters:
-                thumbnail:    { size: [140, 140], mode: outbound, allow_upscale: true }
+                thumbnail:    { size: [180, 180], mode: outbound, allow_upscale: true }
                 strip:        ~
