DIAM-150: Now using phpunit.xml.dist to store the autoload flag, making Symfony and Oro unaware of Diamante's test env

--- a/Tests/Controller/phpunit.xml.dist
+++ b/Tests/Controller/phpunit.xml.dist
@@ -29,5 +29,7 @@
             </exclude>
         </whitelist>
     </filter>
-
+    <php>
+        <env name="AUTOLOAD_FIXTURES" value="false"/>
+    </php>
 </phpunit>
