DIAM-150: Modified bootstrap and phpunit.xml.dist to make include_path configurable.

--- a/Tests/Controller/phpunit.xml.dist
+++ b/Tests/Controller/phpunit.xml.dist
@@ -30,6 +30,7 @@
         </whitelist>
     </filter>
     <php>
+        <includePath>../../../../../app/</includePath>
         <env name="AUTOLOAD_FIXTURES" value="false"/>
     </php>
 </phpunit>
