--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "php": ">=5.4.4",
         "oro/platform": "1.2.*",
         "oro/crm": "1.2.*",
-        "beberlei/assert": "*"
+        "beberlei/assert": "*",
+        "zendframework/zend-mail": "2.*.*"
     },
     "require-dev": {
         "eltrino/phpunit-mockannotations": "*"
