--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -32,5 +32,8 @@
             </exclude>
         </whitelist>
     </filter>
-
+    <php>
+        <includePath>../../app/</includePath>
+        <env name="AUTOLOAD_FIXTURES" value="false"/>
+    </php>
 </phpunit>
