--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -34,6 +34,6 @@
     </filter>
     <php>
         <includePath>../../app/</includePath>
-        <env name="AUTOLOAD_FIXTURES" value="false"/>
+        <env name="AUTOLOAD_FIXTURES" value="true"/>
     </php>
 </phpunit>
