--- a/Tests/Controller/phpunit.xml.dist
+++ b/Tests/Controller/phpunit.xml.dist
@@ -30,7 +30,8 @@
         </whitelist>
     </filter>
     <php>
-        <includePath>../../../../../app/</includePath>
         <env name="AUTOLOAD_FIXTURES" value="false"/>
+        <env name="CLASS_AUTOLOADER"  value="/../../../../../vendor/autoload.php"/>
+        <env name="KERNEL_DIR" value="/../../../../../app"/>
     </php>
 </phpunit>
