#DIAM-168 Extend System Configuration

--- a/Resources/config/system_configuration.yml
+++ b/Resources/config/system_configuration.yml
@@ -8,66 +8,43 @@ oro_system_configuration:
             title: 'Email Integration'
             icon:  icon-envelope
 
-        diamantedesk_remote_mailbox:
-            title:       'Remote Mailbox'
-
-        diamantedesk_mail:
-            title:       'Mail'
+        diamantedesk_mailbox:
+            title:       'Mailbox'
 
     fields:
-        eltrino_diamante_desk.remote_mailbox_enable:
-            type: choice
-            priority: 100
-            options:
-                label: 'Enable'
-                choices:
-                    - No
-                    - Yes
-
-        eltrino_diamante_desk.remote_mailbox_protocol:
+        eltrino_diamante_desk.mailbox_server_address:
             type: text
             priority: 95
             options:
-                label: 'Protocol'
+                label: 'Server Address'
 
-        eltrino_diamante_desk.remote_mailbox_server_address:
+        eltrino_diamante_desk.mailbox_port:
             type: text
             priority: 90
             options:
-                label: 'Server Address'
-
-        eltrino_diamante_desk.remote_mailbox_port:
-            type: text
-            priority: 85
-            options:
                 label: 'Port'
 
-        eltrino_diamante_desk.remote_mailbox_ssl:
+        eltrino_diamante_desk.mailbox_ssl:
             type: choice
-            priority: 80
+            priority: 85
             options:
                 label: 'SSL'
                 choices:
                     - No
                     - Yes
 
-        eltrino_diamante_desk.remote_mailbox_username:
+        eltrino_diamante_desk.mailbox_username:
             type: text
-            priority: 75
+            priority: 80
             options:
                 label: 'Username'
 
-        eltrino_diamante_desk.remote_mailbox_password:
+        eltrino_diamante_desk.mailbox_password:
             type: password
-            priority: 70
+            priority: 75
             options:
                 label: 'Password'
 
-        eltrino_diamante_desk.mail_delimiter:
-            type: text
-            priority: 100
-            options:
-                label: 'Delimiter'
     tree:
         system_configuration:
             platform:
@@ -76,19 +53,12 @@ oro_system_configuration:
                         children:
                             diamantedesk_email_integration:
                                 children:
-                                    diamantedesk_remote_mailbox:
+                                    diamantedesk_mailbox:
                                         priority: 260
                                         children:
-                                            - eltrino_diamante_desk.remote_mailbox_enable
-                                            - eltrino_diamante_desk.remote_mailbox_protocol
-                                            - eltrino_diamante_desk.remote_mailbox_server_address
-                                            - eltrino_diamante_desk.remote_mailbox_port
-                                            - eltrino_diamante_desk.remote_mailbox_ssl
-                                            - eltrino_diamante_desk.remote_mailbox_username
-                                            - eltrino_diamante_desk.remote_mailbox_password
-                                    diamantedesk_mail:
-                                        priority: 255
-                                        children:
-                                            - eltrino_diamante_desk.mail_delimiter
-
+                                            - eltrino_diamante_desk.mailbox_server_address
+                                            - eltrino_diamante_desk.mailbox_port
+                                            - eltrino_diamante_desk.mailbox_ssl
+                                            - eltrino_diamante_desk.mailbox_username
+                                            - eltrino_diamante_desk.mailbox_password
 
