Updated tests to perform workaround for BC breakage on PHP >=5.4.29, PHP >= 5.5.13 and PHP 5.6. Functional tests should run using config file in Tests/Controller and unit tests should use DiamanteDeskBundle/phpunit.xml.dist

--- a/Tests/Controller/phpunit.xml.dist
+++ b/Tests/Controller/phpunit.xml.dist
@@ -33,5 +33,6 @@
         <env name="AUTOLOAD_FIXTURES" value="false"/>
         <env name="CLASS_AUTOLOADER"  value="/../../../../../vendor/autoload.php"/>
         <env name="KERNEL_DIR" value="/../../../../../app"/>
+        <const name="DS" value="/"/>
     </php>
 </phpunit>
