--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "oro/platform": "1.2.*",
         "oro/crm": "1.2.*",
         "beberlei/assert": "*",
-        "zendframework/zend-mail": "2.*.*"
+        "zendframework/zend-mail": "2.*.*",
+        "eltrino/diamantedesk-email-processing-bundle": "*"
     },
     "require-dev": {
         "eltrino/phpunit-mockannotations": "*"
