#DIAM-198 E-mail configuration tooltip under "port" field

--- a/Resources/config/system_configuration.yml
+++ b/Resources/config/system_configuration.yml
@@ -23,6 +23,7 @@ oro_system_configuration:
             priority: 90
             options:
                 label: 'Port'
+                tooltip: "It's typically on port 143. But IMAP over SSL is usually on port 993."
 
         eltrino_email_processing.mailbox_ssl:
             type: choice
