#DIAM-193 Configuration Section Changes

--- a/Resources/config/system_configuration.yml
+++ b/Resources/config/system_configuration.yml
@@ -4,12 +4,12 @@ oro_system_configuration:
             title: 'DiamanteDesk'
             priority: 30
 
-        diamantedesk_email_integration:
-            title: 'Email Integration'
-            icon:  icon-envelope
+        diamantedesk_channels:
+            title: 'Channels'
 
-        diamantedesk_mailbox:
-            title:       'Mailbox'
+        diamantedesk_channels_email_group:
+            title: 'Email'
+            icon: icon-envelope
 
     fields:
         eltrino_email_processing.mailbox_server_address:
@@ -52,10 +52,18 @@ oro_system_configuration:
                 children:
                     diamantedesk_setup:
                         children:
-                            diamantedesk_email_integration:
+                            diamantedesk_channels:
                                 children:
-                                    diamantedesk_mailbox:
+                                    diamantedesk_channels_email_group:
                                         priority: 260
+                                        children:
+                                            - eltrino_email_processing.mailbox_server_address
+                                            - eltrino_email_processing.mailbox_port
+                                            - eltrino_email_processing.mailbox_ssl
+                                            - eltrino_email_processing.mailbox_username
+                                            - eltrino_email_processing.mailbox_password
+                                    diamantedesk_channels_email_group:
+                                        priority: 270
                                         children:
                                             - eltrino_email_processing.mailbox_server_address
                                             - eltrino_email_processing.mailbox_port
