--- a/Resources/config/system_configuration.yml
+++ b/Resources/config/system_configuration.yml
@@ -6,12 +6,20 @@ oro_system_configuration:
 
         diamantedesk_channels:
             title: 'Channels'
+            icon: icon-desktop
 
         diamantedesk_channels_email_group:
             title: 'Email'
-            icon: icon-envelope
+
+        diamantedesk_channels_general_group:
+            title: 'General'
 
     fields:
+        eltrino_email_processing.default_branch:
+            type: diamante_email_processing_default_branch
+            options:
+                label: 'Default Branch'
+
         eltrino_email_processing.mailbox_server_address:
             type: text
             priority: 95
@@ -54,6 +62,10 @@ oro_system_configuration:
                         children:
                             diamantedesk_channels:
                                 children:
+                                    diamantedesk_channels_general_group:
+                                        priority: 300
+                                        children:
+                                            - eltrino_email_processing.default_branch
                                     diamantedesk_channels_email_group:
                                         priority: 260
                                         children:
