#DIAM-230 Implement Unassigned type of Ticket

--- a/Resources/config/datagrid.yml
+++ b/Resources/config/datagrid.yml
@@ -117,7 +117,8 @@ datagrid:
             branchName:
                 label:   Branch
             assigneeFullName:
-                label:   Assignee
+                label:   Assignee,
+                type:    assignee
             reporterFullName:
                 label:   Reporter
             priority:
