--- a/Resources/config/datagrid.yml
+++ b/Resources/config/datagrid.yml
@@ -44,7 +44,7 @@ datagrid:
             view:
                 type:          navigate
                 label:         View
-                icon:          user
+                icon:          eye-open
                 link:          view_link
                 rowAction:     true
                 acl_resource:  VIEW;Entity:EltrinoDiamanteDeskBundle:Branch
@@ -201,7 +201,7 @@ datagrid:
             view:
                 type:          navigate
                 label:         View
-                icon:          user
+                icon:          eye-open
                 link:          view_link
                 rowAction:     true
                 acl_resource:  VIEW;Entity:EltrinoDiamanteDeskBundle:Ticket
@@ -249,7 +249,7 @@ datagrid:
             view:
                 type:          navigate
                 label:         View
-                icon:          user
+                icon:          eye-open
                 link:          view_link
                 rowAction:     true
             delete:
