move files from another project

--- a/Resources/front/bower.json
+++ b/Resources/front/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "requirejs": "~2.1.14",
     "marionette": "~2.1.0",
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "requirejs-tpl": "*"
   }
 }
