--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "diamante-desk",
   "version": "0.0.1",
-  "devDependencies": {
+  "dependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-less": "^0.11.4",
+    "grunt-contrib-watch": "^0.6.1",
     "load-grunt-tasks": "^0.6.0",
     "requirejs": "^2.1.14"
   }
