#DIAM-250 Put all code under new structure  - Branch moved

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,10 +14,11 @@
 
     <testsuites>
         <testsuite name="DiamanteDesk Test Suite">
-            <directory suffix="Test.php">Tests/Attachment</directory>
-            <directory suffix="Test.php">Tests/Branch</directory>
-            <directory suffix="Test.php">Tests/Entity</directory>
+            <directory suffix="Test.php">Tests/Api</directory>
+            <directory suffix="Test.php">Tests/Infrastructure</directory>
             <directory suffix="Test.php">Tests/Model</directory>
+            <directory suffix="Test.php">Tests/Attachment</directory>
+            <directory suffix="Test.php">Tests/Entity</directory>
             <directory suffix="Test.php">Tests/Ticket</directory>
         </testsuite>
     </testsuites>
