DIAM-212: Change code namespace

--- a/Resources/config/oro/bundles.yml
+++ b/Resources/config/oro/bundles.yml
@@ -1,2 +1,2 @@
 bundles:
-    - Eltrino\EmailProcessingBundle\EltrinoEmailProcessingBundle
+    - Diamante\EmailProcessingBundle\DiamanteEmailProcessingBundle
