--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-less": "^0.11.4",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-sync": "^0.2.0",
     "load-grunt-tasks": "^0.6.0",
     "requirejs": "^2.1.14"
   }
