--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "eltrino/diamante-desk-bundle",
+    "name": "diamante/desk-bundle ",
     "description": "DiamanteDesk Bundle",
-    "homepage": "https://github.com/eltrino/EltrinoDiamanteDeskBundle",
+    "homepage": "https://github.com/eltrino/DiamanteDeskBundle",
     "license": "OSL-3.0",
     "authors": [
         {
@@ -18,7 +18,7 @@
     "repositories": [
         {
             "type": "git",
-            "url": "https://github.com/eltrino/EltrinoDiamanteDeskBundle.git"
+            "url": "https://github.com/eltrino/DiamanteDeskBundle.git"
         }
     ],
     "require": {
@@ -37,5 +37,8 @@
         "branch-alias": {
             "dev-master": "1.0.x-dev"
         }
+    },
+    "replace": {
+        "eltrino/diamante-desk-bundle":"1.*"
     }
 }
