--- a/Resources/config/system_configuration.yml
+++ b/Resources/config/system_configuration.yml
@@ -1,39 +1,39 @@
 oro_system_configuration:
     groups:
-        diamantedesk_setup:
+        diamante_desk_setup:
             title: 'DiamanteDesk'
             priority: 30
 
-        diamantedesk_channels:
+        diamante_desk_channels:
             title: 'Channels'
             icon: icon-desktop
 
-        diamantedesk_channels_email_group:
+        diamante_desk_channels_email_group:
             title: 'Email'
 
-        diamantedesk_channels_general_group:
+        diamante_desk_channels_general_group:
             title: 'General'
 
     fields:
-        eltrino_email_processing.default_branch:
+        diamante_email_processing.default_branch:
             type: diamante_email_processing_default_branch
             options:
                 label: 'Default Branch'
 
-        eltrino_email_processing.mailbox_server_address:
+        diamante_email_processing.mailbox_server_address:
             type: text
             priority: 95
             options:
                 label: 'Server Address'
 
-        eltrino_email_processing.mailbox_port:
+        diamante_email_processing.mailbox_port:
             type: text
             priority: 90
             options:
                 label: 'Port'
                 tooltip: "It's typically on port 143. But IMAP over SSL is usually on port 993."
 
-        eltrino_email_processing.mailbox_ssl:
+        diamante_email_processing.mailbox_ssl:
             type: choice
             priority: 85
             options:
@@ -42,13 +42,13 @@ oro_system_configuration:
                     - No
                     - Yes
 
-        eltrino_email_processing.mailbox_username:
+        diamante_email_processing.mailbox_username:
             type: text
             priority: 80
             options:
                 label: 'Username'
 
-        eltrino_email_processing.mailbox_password:
+        diamante_email_processing.mailbox_password:
             type: password
             priority: 75
             options:
@@ -58,19 +58,19 @@ oro_system_configuration:
         system_configuration:
             platform:
                 children:
-                    diamantedesk_setup:
+                    diamante_desk_setup:
                         children:
-                            diamantedesk_channels:
+                            diamante_desk_channels:
                                 children:
-                                    diamantedesk_channels_general_group:
+                                    diamante_desk_channels_general_group:
                                         priority: 300
                                         children:
-                                            - eltrino_email_processing.default_branch
-                                    diamantedesk_channels_email_group:
+                                            - diamante_email_processing.default_branch
+                                    diamante_desk_channels_email_group:
                                         priority: 260
                                         children:
-                                            - eltrino_email_processing.mailbox_server_address
-                                            - eltrino_email_processing.mailbox_port
-                                            - eltrino_email_processing.mailbox_ssl
-                                            - eltrino_email_processing.mailbox_username
-                                            - eltrino_email_processing.mailbox_password
+                                            - diamante_email_processing.mailbox_server_address
+                                            - diamante_email_processing.mailbox_port
+                                            - diamante_email_processing.mailbox_ssl
+                                            - diamante_email_processing.mailbox_username
+                                            - diamante_email_processing.mailbox_password
