task view html/css

--- a/Resources/front/assets/js/modules/Task/models/tasks.json
+++ b/Resources/front/assets/js/modules/Task/models/tasks.json
@@ -3,6 +3,7 @@
     "id": 1,
     "created_at": "10-Jun-2014",
     "subject": "Review current baseline issue",
+    "shortcode" : "XAS",
     "priority": "Hight",
     "status": "Assigned",
     "description" : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores cum dolor doloremque eaque earum enim error in maiores molestias nam non possimus quos repellat, sunt tempora unde voluptas voluptate."
@@ -11,6 +12,7 @@
     "id": 2,
     "created_at": "10-Jun-2014",
     "subject": "Review current baseline issue",
+    "shortcode" : "XAS",
     "priority": "Hight",
     "status": "Assigned",
     "description" : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores cum dolor doloremque eaque earum enim error in maiores molestias nam non possimus quos repellat, sunt tempora unde voluptas voluptate."
@@ -19,6 +21,7 @@
     "id": 3,
     "created_at": "10-Jun-2014",
     "subject": "Review current baseline issue",
+    "shortcode" : "XAS",
     "priority": "Hight",
     "status": "Assigned",
     "description" : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores cum dolor doloremque eaque earum enim error in maiores molestias nam non possimus quos repellat, sunt tempora unde voluptas voluptate."
@@ -27,6 +30,7 @@
     "id": 4,
     "created_at": "10-Jun-2014",
     "subject": "Review current baseline issue",
+    "shortcode" : "XAS",
     "priority": "Hight",
     "status": "Assigned",
     "description" : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores cum dolor doloremque eaque earum enim error in maiores molestias nam non possimus quos repellat, sunt tempora unde voluptas voluptate."
@@ -43,6 +47,7 @@
     "id": 6,
     "created_at": "10-Jun-2014",
     "subject": "Review current baseline issue",
+    "shortcode" : "XAS",
     "priority": "Hight",
     "status": "Assigned",
     "description" : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores cum dolor doloremque eaque earum enim error in maiores molestias nam non possimus quos repellat, sunt tempora unde voluptas voluptate."
