--- a/Tests/Controller/phpunit.xml.dist
+++ b/Tests/Controller/phpunit.xml.dist
@@ -30,7 +30,7 @@
         </whitelist>
     </filter>
     <php>
-        <env name="AUTOLOAD_FIXTURES" value="true"/>
+        <env name="AUTOLOAD_FIXTURES" value="false"/>
         <env name="CLASS_AUTOLOADER"  value="/../../../../../vendor/autoload.php"/>
         <env name="KERNEL_DIR" value="/../../../../../app"/>
     </php>
