--- a/Resources/config/system_configuration.yml
+++ b/Resources/config/system_configuration.yml
@@ -16,17 +16,20 @@ oro_system_configuration:
 
     fields:
         diamante_email_processing.default_branch:
+            data_type: integer
             type: diamante_email_processing_default_branch
             options:
                 label: 'Default Branch'
 
         diamante_email_processing.mailbox_server_address:
+            data_type: string
             type: text
             priority: 95
             options:
                 label: 'Server Address'
 
         diamante_email_processing.mailbox_port:
+            data_type: string
             type: text
             priority: 90
             options:
@@ -34,6 +37,7 @@ oro_system_configuration:
                 tooltip: "It's typically on port 143. But IMAP over SSL is usually on port 993."
 
         diamante_email_processing.mailbox_ssl:
+            data_type: boolean
             type: choice
             priority: 85
             options:
@@ -43,12 +47,14 @@ oro_system_configuration:
                     - Yes
 
         diamante_email_processing.mailbox_username:
+            data_type: string
             type: text
             priority: 80
             options:
                 label: 'Username'
 
         diamante_email_processing.mailbox_password:
+            data_type: string
             type: password
             priority: 75
             options:
