implement popup, create task view

--- a/Resources/front/assets/js/modules/Task/models/tasks.json
+++ b/Resources/front/assets/js/modules/Task/models/tasks.json
@@ -4,7 +4,7 @@
     "created_at": "10-Jun-2014",
     "subject": "Review current baseline issue",
     "shortcode" : "XAS",
-    "priority": "Hight",
+    "priority": "high",
     "status": "Assigned",
     "description" : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores cum dolor doloremque eaque earum enim error in maiores molestias nam non possimus quos repellat, sunt tempora unde voluptas voluptate."
   },
@@ -13,7 +13,7 @@
     "created_at": "10-Jun-2014",
     "subject": "Review current baseline issue",
     "shortcode" : "XAS",
-    "priority": "Hight",
+    "priority": "high",
     "status": "Assigned",
     "description" : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores cum dolor doloremque eaque earum enim error in maiores molestias nam non possimus quos repellat, sunt tempora unde voluptas voluptate."
   },
@@ -22,7 +22,7 @@
     "created_at": "10-Jun-2014",
     "subject": "Review current baseline issue",
     "shortcode" : "XAS",
-    "priority": "Hight",
+    "priority": "high",
     "status": "Assigned",
     "description" : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores cum dolor doloremque eaque earum enim error in maiores molestias nam non possimus quos repellat, sunt tempora unde voluptas voluptate."
   },
@@ -31,7 +31,7 @@
     "created_at": "10-Jun-2014",
     "subject": "Review current baseline issue",
     "shortcode" : "XAS",
-    "priority": "Hight",
+    "priority": "normal",
     "status": "Assigned",
     "description" : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores cum dolor doloremque eaque earum enim error in maiores molestias nam non possimus quos repellat, sunt tempora unde voluptas voluptate."
   },
@@ -40,7 +40,7 @@
     "created_at": "10-Jun-2014",
     "subject": "Review current baseline issue",
     "shortcode" : "XAS",
-    "priority": "Hight",
+    "priority": "low",
     "status": "Assigned",
     "description" : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores cum dolor doloremque eaque earum enim error in maiores molestias nam non possimus quos repellat, sunt tempora unde voluptas voluptate."
   },
@@ -49,7 +49,7 @@
     "created_at": "10-Jun-2014",
     "subject": "Review current baseline issue",
     "shortcode" : "XAS",
-    "priority": "Hight",
+    "priority": "high",
     "status": "Assigned",
     "description" : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores cum dolor doloremque eaque earum enim error in maiores molestias nam non possimus quos repellat, sunt tempora unde voluptas voluptate."
   },
@@ -58,7 +58,7 @@
     "created_at": "10-Jun-2014",
     "subject": "Review current baseline issue",
     "shortcode" : "XAS",
-    "priority": "Hight",
+    "priority": "high",
     "status": "Assigned",
     "description" : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab asperiores cum dolor doloremque eaque earum enim error in maiores molestias nam non possimus quos repellat, sunt tempora unde voluptas voluptate."
   }
