DIAM-301 Refactor GOD class DIAM-302 Implement configuration for services DIAM-303 Generate routes

--- a/Resources/config/oro/routing.yml
+++ b/Resources/config/oro/routing.yml
@@ -3,7 +3,11 @@ diamante_desk_bundle:
     type:         annotation
     prefix:       /desk
 
-diamante_desk_api_bundle:
-    resource:     "@DiamanteDeskBundle/Controller/ApiController.php"
-    type:         annotation
-    prefix:       /api/rest/latest
+diamante_desk_api_branch:
+    resource:     diamante.branch.service
+    type:         rest_service
+    prefix:       /api/rest/{version}/desk/
+    requirements:
+        version:  latest|v1
+    defaults:
+        version:  latest
