--- a/Resources/config/datagrid.yml
+++ b/Resources/config/datagrid.yml
@@ -80,6 +80,7 @@ datagrid:
             query:
                 select:
                     - i.id
+                    - CONCAT(branch.key, CONCAT('-', i.number)) as key
                     - i.subject
                     - i.priority
                     - i.status
@@ -95,23 +96,25 @@ datagrid:
                 join:
                     left:
                         - { join: i.branch, alias: branch }
-                        - { join: i.reporter, alias: reporter }
                         - { join: i.assignee, alias: assignee }
+                        - { join: i.reporter, alias: reporter }
         properties:
             id: ~
             view_link:
                 type:       url
                 route:      diamante_ticket_view
-                params:     [ id ]
+                params:     [ key ]
             update_link:
                 type:       url
                 route:      diamante_ticket_update
-                params:     [ id ]
+                params:     [ key ]
             delete_link:
                 type:       url
                 route:      diamante_ticket_delete
-                params:     [ id ]
+                params:     [ key ]
         columns:
+            key:
+                label:   Key
             subject:
                 label:   Subject
             branchName:
@@ -133,6 +136,8 @@ datagrid:
                 frontend_type: datetime
         sorters:
             columns:
+                key:
+                  data_name: key
                 subject:
                   data_name: i.subject
                 branchName:
@@ -153,6 +158,9 @@ datagrid:
                 updatedAt: DESC
         filters:
             columns:
+                key:
+                    type:      string
+                    data_name: ticketKey
                 subject:
                     type:      string
                     data_name: i.subject
