DIAM-301, DIAM-302, DIAM-303 - Added missing validation in service - Added dependencie for api bundle

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "oro/platform": "1.2.*",
         "oro/crm": "1.2.*",
         "beberlei/assert": "2.*",
-        "diamante/email-processing-bundle": "*"
+        "diamante/email-processing-bundle": "*",
+        "diamante/api-bundle": "*"
     },
     "require-dev": {
         "eltrino/phpunit-mockannotations": "*"
