--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "require": {
         "php": ">=5.4.4",
         "oro/platform": "1.2.*",
-        "nelmio/api-doc-bundle": "*"
+        "nelmio/api-doc-bundle": "*",
+        "friendsofsymfony/rest-bundle": "0.12.*"
     },
     "require-dev": {
         "eltrino/phpunit-mockannotations": "*"
