--- a/Resources/config/oro/routing.yml
+++ b/Resources/config/oro/routing.yml
@@ -4,8 +4,7 @@ diamante_desk_bundle:
     prefix:       /desk
 
 diamante_desk_api_branch:
-# @todo alias for service
-    resource:     diamante.branch.service
+    resource:     diamante.branch.api.service
     type:         diamante_rest_service
     prefix:       /api/rest/{version}/desk/
     requirements:
@@ -16,8 +15,18 @@ diamante_desk_api_branch:
         _format:  json
 
 diamante_desk_api_ticket:
-# @todo alias for service
-    resource:     diamante.ticket.service
+    resource:     diamante.ticket.api.service
+    type:         diamante_rest_service
+    prefix:       /api/rest/{version}/desk/
+    requirements:
+        version:  latest|v1
+        _format:  xml|json
+    defaults:
+        version:  latest
+        _format:  json
+
+diamante_desk_api_comment:
+    resource:     diamante.comment.api.service
     type:         diamante_rest_service
     prefix:       /api/rest/{version}/desk/
     requirements:
