DIAM-346: fixed bug with not displaying notification after image upload

--- a/Resources/config/requirejs.yml
+++ b/Resources/config/requirejs.yml
@@ -1,3 +1,5 @@
 config:
     paths:
         'diamante/attachments/draganddrop': 'bundles/diamantedesk/js/diam.attachments.js'
+        'diamante/filters': 'bundles/diamantedesk/js/diam.filters.js'
+        'diamante/ajax.messages': 'bundles/diamantedesk/js/diam.ajax.messages.js'
