--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "marionette": "~2.1.0",
     "bootstrap": "~3.2.0",
     "requirejs-tpl": "*",
-    "fontawesome": "~4.2.0"
+    "fontawesome": "~4.2.0",
+    "dfm-crypto-js": "~3.1.2"
   }
 }
