Fixed installation procuderu in readme file

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "diamante/api-bundle",
+    "name": "diamante/front-bundle",
     "description": "DiamanteDesk Front Bundle",
     "homepage": "https://github.com/eltrino/DiamanteFrontBundle",
     "license": "OSL-3.0",
