DIAM-361. Ticket pages: Need to add column with checkbox and mass action

--- a/Resources/config/datagrid.yml
+++ b/Resources/config/datagrid.yml
@@ -217,6 +217,14 @@ datagrid:
                 icon:          trash
                 link:          delete_link
                 acl_resource:  DELETE;Entity:DiamanteDeskBundle:Ticket
+        mass_actions:
+            delete:
+                type: delete
+                label : Delete
+                acl_resource:  DELETE;Entity:DiamanteDeskBundle:Ticket
+                entity_name: DiamanteDeskBundle:Ticket
+                data_identifier: i.id
+                icon: trash
         options:
             entityHint: tickets
 
