DIAM-365 Moved ticket description to entity group only

--- a/Resources/config/serializer/Model.Ticket.Ticket.yml
+++ b/Resources/config/serializer/Model.Ticket.Ticket.yml
@@ -11,6 +11,8 @@ Diamante\DeskBundle\Model\Ticket\Ticket:
             exclude: true
         assignee:
             exclude: true
+        description:
+            groups: ["entity"]
         comments:
             groups: ["entity"]
         attachments:
