DIAM-269 Updated commands to excute correct grunt scripts - Updated README file with installation instruction

--- a/Resources/config/system_configuration.yml
+++ b/Resources/config/system_configuration.yml
@@ -5,7 +5,8 @@ oro_system_configuration:
 
     fields:
         diamante_front.registration_required:
-            type: choice
+            type: boolean
+            data_type: string
             options:
                 label: 'Registration Requied'
                 choices:
