DIAM-410. All Tickets page: Buttons "Edit" or "Delete" has wrong titles

--- a/Resources/config/datagrid.yml
+++ b/Resources/config/datagrid.yml
@@ -209,13 +209,13 @@ datagrid:
                 acl_resource:  VIEW;Entity:DiamanteDeskBundle:Ticket
             update:
                 type:          navigate
-                label:         diamante.desk.ticket.actions.update
+                label:         diamante.desk.ticket.actions.edit
                 icon:          edit
                 link:          update_link
                 acl_resource:  EDIT;Entity:DiamanteDeskBundle:Ticket
             delete:
                 type:          delete
-                label:         diamante.desk.ticket.actions.delete
+                label:         diamante.desk.ticket.actions.remove
                 icon:          trash
                 link:          delete_link
                 acl_resource:  DELETE;Entity:DiamanteDeskBundle:Ticket
